Run dh_strip during package build.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@759 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -286,7 +286,7 @@ binary-common:
 #	dh_installinfo
 	dh_installman
 	dh_link
-#	dh_strip
+	dh_strip
 	dh_compress -X.h -X README.Debian 
 	dh_fixperms
 #	dh_perl
