Do not use $(ROOT_CMD) in kdist_config
* Do not run configure under $(ROOT_CMD) in kdist_config.  kdist_build
  already runs that target under $(ROOT_CMD), so this provokes errors
  from fakeroot about nesting invocations.  Nothing this target does
  requires fakeroot.  Thanks, Bastian Kleineidam.  (Closes:  #416594)


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@760 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -93,7 +93,7 @@ binary_modules: binary-modules
 # should configure the module so it is ready for compilation (mostly
 # useful for calling configure)
 kdist_config kdist_configure:
-	    $(ROOT_CMD) $(MAKE) $(MFLAGS) -f debian/rules configure
+	$(MAKE) $(MFLAGS) -f debian/rules configure
 
 # the kdist_clean target is called by make-kpkg modules_clean. It is
 # responsible for cleaning up any changes that have been made by the
