Clean up nvidia-glx postrm handling
* Do not remove /usr/lib/libGL.so on purge of nvidia-glx.  At that
  point, we've removed our diversion, so this is someone else's file and
  we shouldn't be deleting it.
* Remove our diversions on aborted installations of nvidia-glx, since we
  may have gotten far enough to create them.
* Document the nvidia-glx postrm cases and rationale in more detail in
  comments in the postrm.  Thanks, Sven Joachim.  (Closes: #575272)


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@761 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,7 @@ Description: NVIDIA binary Xorg driver
 
 Package: nvidia-glx-dev
 Architecture: i386 amd64
-Depends: nvidia-glx (= ${binary:Version}), ${misc:Depends}
+Depends: nvidia-glx (= ${binary:Version}), libx11-dev, ${misc:Depends}
 Provides: libgl-dev
 Conflicts: libgl-dev, mesa-common-dev
 Replaces: libgl-dev
