--- a/debian/nvidia-glx.postrm.in
+++ b/debian/nvidia-glx.postrm.in
@@ -1,25 +1,34 @@
 #! /bin/sh
 # postrm script for nvidia-glx
-#
-# see: dh_installdeb(1)
 
 set -e
 
-# summary of how this script can be called:
-#        * <postrm> `remove'
-#        * <postrm> `purge'
-#        * <old-postrm> `upgrade' <new-version>
-#        * <new-postrm> `failed-upgrade' <old-version>
-#        * <new-postrm> `abort-install'
-#        * <new-postrm> `abort-install' <old-version>
-#        * <new-postrm> `abort-upgrade' <old-version>
-#        * <disappearer's-postrm> `disappear' <r>overwrit>r> <new-version>
-# for details, see /usr/share/doc/packaging-manual/
+# Rationale:
+#
+# Remove our diversions at the remove stage, since even if we have
+# configuration files left, we want to put back everything we moved.  Do not
+# try to do this again on purge since remove will have already been called,
+# and since the rm of /usr/lib/libGL.so will remove someone else's version at
+# that point.
+#
+# In the abort-install case, we may have gotten far enough to create our
+# diversions in our preinst, so back out of them.  Don't remove
+# /usr/lib/libGL.so, since that may still be owned by another package and
+# since we don't create that in preinst.
+#
+# Leave all of our diversions alone during upgrades or aborted upgrades, since
+# we're staying installed in all cases and the diversions are still correct.
+#
+# It's not clear what to do on disappear, but for now leave everything alone
+# and assume that our overwriting package will have logic to take over the
+# diversions and doesn't want us messing with them.
 
 case "$1" in
-    remove|purge)
-        # remove file created by init script
-    	rm /usr/lib/libGL.so || true
+    remove|abort-install)
+        if [ remove = "$1" ] ; then
+            # remove file created by init script
+    	    rm /usr/lib/libGL.so || true
+        fi
 	dpkg-divert --remove --rename --package nvidia-glx --divert /usr/lib/nvidia/libGL.so.1.xlibmesa /usr/lib/libGL.so.1 > /dev/null
 	dpkg-divert --remove --rename --package nvidia-glx --divert /usr/lib/nvidia/libGL.so.1.2.xlibmesa /usr/lib/libGL.so.1.2 > /dev/null
 	
@@ -37,7 +46,7 @@ case "$1" in
 		
     ;;
     
-    upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
+    upgrade|failed-upgrade|abort-upgrade|disappear|purge)
 
 
         ;;
