--- a/debian/nvidia-libvdpau1.links.in
+++ b/debian/nvidia-libvdpau1.links.in
@@ -1,2 +1,2 @@
 usr/lib/libvdpau.so.#VERSION#		usr/lib/libvdpau.so.1
-usr/lib/vdpau/libvdpau_trace.so.#VERSION#	usr/lib/libvdpau_trace.so
+usr/lib/vdpau/libvdpau_trace.so.#VERSION#	usr/lib/vdpau/libvdpau_trace.so.1
