--- a/debian/nvidia-vdpau-driver-ia32.links.in
+++ b/debian/nvidia-vdpau-driver-ia32.links.in
@@ -1,1 +1,1 @@
-usr/lib32/libvdpau_nvidia.so.#VERSION#	usr/lib32/libvdpau_nvidia.so
+usr/lib32/vdpau/libvdpau_nvidia.so.#VERSION#	usr/lib32/vdpau/libvdpau_nvidia.so.1
