Multiple package updates from Andreas Beckmann
* libcuda1: update symbols files for new symbols (190.xx).
* Drop ia32-libs alternative dependencies.
* Install upstream changelog as changelog.gz (closes: #459721)
* debian/watch: check x86 and x86_64, uscan can download multiple files
* nvidia-glx.shlibs: add libnvidia-cfg.so
* nvidia-glx: update lintian overrides for moved libnvidia-cfg.so
* nvidia-glx: add lintian overrides for spelling errors
* debian.binary/control.template: make module package depend on the
  corresponding linux-image (closes: #463403)
* debian/*.NEWS: remove asterisks to make lintian happy


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@764 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx-ia32.lintian-overrides.in
+++ b/debian/nvidia-glx-ia32.lintian-overrides.in
@@ -20,3 +20,7 @@ nvidia-glx-ia32: binary-has-unneeded-section ./usr/lib32/libGLcore.so.#VERSION# 
 nvidia-glx-ia32: binary-has-unneeded-section ./usr/lib32/libnvidia-tls.so.#VERSION# .comment
 nvidia-glx-ia32: binary-has-unneeded-section ./usr/lib32/tls/libnvidia-tls.so.#VERSION# .comment
 
+nvidia-glx-ia32: spelling-error-in-binary ./usr/lib32/libGLcore.so.#VERSION# ment meant
+nvidia-glx-ia32: spelling-error-in-binary ./usr/lib32/libGLcore.so.#VERSION# incompatable incompatible
+nvidia-glx-ia32: spelling-error-in-binary ./usr/lib32/libGLcore.so.#VERSION# Unkown Unknown
+
