--- a/debian/nvidia-glx.lintian-overrides.i386.in
+++ b/debian/nvidia-glx.lintian-overrides.i386.in
@@ -5,7 +5,7 @@ nvidia-glx: shlib-with-non-pic-code usr/lib/libGL.so.#VERSION#
 nvidia-glx: shlib-with-non-pic-code usr/lib/libGLcore.so.#VERSION#
 nvidia-glx: shlib-with-non-pic-code usr/lib/libXvMCNVIDIA.so.#VERSION#
 nvidia-glx: shlib-with-non-pic-code usr/lib/libnvidia-tls.so.#VERSION#
-nvidia-glx: shlib-with-non-pic-code usr/lib/nvidia/libnvidia-cfg.so.#VERSION#
+nvidia-glx: shlib-with-non-pic-code usr/lib/libnvidia-cfg.so.#VERSION#
 nvidia-glx: shlib-with-non-pic-code usr/lib/tls/libnvidia-tls.so.#VERSION#
 nvidia-glx: shlib-with-non-pic-code usr/lib/xorg/modules/extensions/libglx.so.#VERSION#
 
@@ -13,7 +13,7 @@ nvidia-glx: shlib-without-PT_GNU_STACK-section usr/lib/libGL.so.#VERSION#
 nvidia-glx: shlib-without-PT_GNU_STACK-section usr/lib/libGLcore.so.#VERSION#
 nvidia-glx: shlib-without-PT_GNU_STACK-section usr/lib/libXvMCNVIDIA.so.#VERSION#
 nvidia-glx: shlib-without-PT_GNU_STACK-section usr/lib/libnvidia-tls.so.#VERSION#
-nvidia-glx: shlib-without-PT_GNU_STACK-section usr/lib/nvidia/libnvidia-cfg.so.#VERSION#
+nvidia-glx: shlib-without-PT_GNU_STACK-section usr/lib/libnvidia-cfg.so.#VERSION#
 nvidia-glx: shlib-without-PT_GNU_STACK-section usr/lib/tls/libnvidia-tls.so.#VERSION#
 nvidia-glx: shlib-without-PT_GNU_STACK-section usr/lib/xorg/modules/extensions/libglx.so.#VERSION#
 
@@ -21,7 +21,7 @@ nvidia-glx: binary-has-unneeded-section ./usr/lib/libGL.so.#VERSION# .comment
 nvidia-glx: binary-has-unneeded-section ./usr/lib/libGLcore.so.#VERSION# .comment
 nvidia-glx: binary-has-unneeded-section ./usr/lib/libXvMCNVIDIA.so.#VERSION# .comment
 nvidia-glx: binary-has-unneeded-section ./usr/lib/libnvidia-tls.so.#VERSION# .comment
-nvidia-glx: binary-has-unneeded-section ./usr/lib/nvidia/libnvidia-cfg.so.#VERSION# .comment
+nvidia-glx: binary-has-unneeded-section ./usr/lib/libnvidia-cfg.so.#VERSION# .comment
 nvidia-glx: binary-has-unneeded-section ./usr/lib/nvidia/tls_test .comment
 nvidia-glx: binary-has-unneeded-section ./usr/lib/nvidia/tls_test_dso.so .comment
 nvidia-glx: binary-has-unneeded-section ./usr/lib/tls/libnvidia-tls.so.#VERSION# .comment
@@ -30,6 +30,10 @@ nvidia-glx: binary-has-unneeded-section ./usr/lib/xorg/modules/extensions/libglx
 
 nvidia-glx: binary-has-unneeded-section ./usr/lib/libGLcore.so.#VERSION# .note
 nvidia-glx: binary-has-unneeded-section ./usr/lib/libXvMCNVIDIA.so.#VERSION# .note
-nvidia-glx: binary-has-unneeded-section ./usr/lib/nvidia/libnvidia-cfg.so.#VERSION# .note
+nvidia-glx: binary-has-unneeded-section ./usr/lib/libnvidia-cfg.so.#VERSION# .note
 nvidia-glx: binary-has-unneeded-section ./usr/lib/xorg/modules/drivers/nvidia_drv.so .note
+
+nvidia-glx: spelling-error-in-binary ./usr/lib/libGLcore.so.#VERSION# ment meant
+nvidia-glx: spelling-error-in-binary ./usr/lib/libGLcore.so.#VERSION# incompatable incompatible
+nvidia-glx: spelling-error-in-binary ./usr/lib/libGLcore.so.#VERSION# Unkown Unknown
 
