Fixes to the new quilt patching from Andreas Beckmann
Updated patch, fixes a permission problem. (The patches/ directory in
module source tarball in nvidia-kernel-source was shipped as 0644.)
Also avoid calling dh_quilt_patch when there is no debian/control.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@769 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -112,7 +112,8 @@ build-kernel-stamp: debian.binary/changelog
 		# Prepare debian files for module package
 	    cp -a $(CURDIR)/debian.binary/* $(CURDIR)/debian/temp/modules/nvidia-kernel/debian
 	    for f in `ls $(CURDIR)/debian.binary` ; do \
-	       test ! -f $(CURDIR)/debian.binary/$$f || perl -p \
+	       if [ -f $(CURDIR)/debian.binary/$$f ]; then \
+		perl -p \
 	        -e 's{#BASE_VERSION#}{$(base_version)}g;' \
 		-e 's{#RELEASE#}{$(release)}g;' \
 		-e 's{#VERSION#}{$(version)}g;' \
@@ -120,6 +121,7 @@ build-kernel-stamp: debian.binary/changelog
 		-e 's{#URL#}{$(url)}g' \
 		< $(CURDIR)/debian.binary/$$f >		$(CURDIR)/debian/temp/modules/nvidia-kernel/debian/$$f ; \
 		chmod 0644 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/$$f ; \
+	      fi \
 	    done
 
 #	    chmod 775 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/patches
