Use dh_gencontrol -V instead of writing to substvars
Each binary package uses its own substvars file under debhelper, so
use the -V option to dh_gencontrol to set nvidia:Version instead.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@772 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -306,8 +306,7 @@ binary-common:
 	dh_makeshlibs -s
 	dh_installdeb
 	dh_shlibdeps
-	echo 'nvidia:Version=$(version)' >> debian/substvars
-	dh_gencontrol -s
+	dh_gencontrol -V'nvidia:Version=$(version)' -s
 	dh_md5sums
 	dh_builddeb -s
 
