Fix how -V is passed into dh_gencontrol
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@773 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -306,7 +306,7 @@ binary-common:
 	dh_makeshlibs -s
 	dh_installdeb
 	dh_shlibdeps
-	dh_gencontrol -V'nvidia:Version=$(version)' -s
+	dh_gencontrol -s -- -V'nvidia:Version=$(version)'
 	dh_md5sums
 	dh_builddeb -s
 
