--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: non-free/x11
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
 Uploaders: Randall Donald <rdonald@debian.org>,
-           Andres Mejia <mcitadel@gmail.com>
+ Andres Mejia <mcitadel@gmail.com>, Russ Allbery <rra@debian.org>
 Vcs-Svn: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-nvidia/packages/nvidia-graphics-drivers
 Build-Depends: debhelper (>= 7), sed (>> 3.0), libxext6, bzip2,
