Add -s to the dh_compress rule
The build was failing with the most recent debhelper on i386 at the
dh_compress level because it was attempting to act on the amd64-only
package.  Add -s to hopefully fix that.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@779 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -299,7 +299,7 @@ binary-common:
 #	dh_installinfo
 	dh_installman
 	dh_link
-	dh_compress -X.h -X README.Debian 
+	dh_compress -s -X.h -X README.Debian 
 	dh_fixperms
 #	dh_perl
 #	dh_python
