Module kdist_clean must depend on configure
dh_testroot requires that debian/control exist, so ensure that we
generate it from the template before taking kdist_clean actions.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@780 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -94,7 +94,7 @@ kdist_config kdist_configure:
 # the kdist_clean target is called by make-kpkg modules_clean. It is
 # responsible for cleaning up any changes that have been made by the
 # other kdist_commands (except for the .deb files created).
-kdist_clean: 
+kdist_clean: configure
 	dh_testdir
 	$(MAKE) -C . LINUXDIR=$(KSRC) KVERREL=$(KVERS) clean
 	dh_quilt_unpatch || quilt --quiltrc /dev/null pop -af
