--- a/debian/rules
+++ b/debian/rules
@@ -294,7 +294,7 @@ binary-common:
 #	dh_installemacsen
 #	dh_installpam
 #	dh_installmime
-	dh_installinit
+	dh_installinit -- start 20 2 3 4 5 .
 #	dh_installcron
 #	dh_installinfo
 	dh_installman
