Make nvidia-kernel-source depend on module-assistant
* Make nvidia-kernel-source depend on module-assistant.  At least for
  right now, it uses the make fragments provided by module-assistant to
  implement required rules for the module building interface.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@805 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -19,8 +19,8 @@ DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 # Prefix of the target package name
 PACKAGE		= nvidia-kernel
 
--include /usr/share/modass/include/generic.make
--include /usr/share/modass/include/common-rules.make
+include /usr/share/modass/include/generic.make
+include /usr/share/modass/include/common-rules.make
 
 configure:
 	sed 's/#KVERS#/$(KVERS)/g' debian/control.template > $(CURDIR)/debian/control
