--- a/debian/rules
+++ b/debian/rules
@@ -32,28 +32,20 @@ AUTOKEEP	 = debian/copyright
 AUTOCLEAN	 = \
 debian/nvidia-kernel-source.README.Debian \
 debian/nvidia-glx.links \
-debian/nvidia-glx.lintian-overrides.amd64 debian/nvidia-glx.lintian-overrides.i386 \
 debian/nvidia-glx.docs debian/nvidia-glx.examples \
 debian/nvidia-libvdpau1.links debian/nvidia-libvdpau1.docs \
 debian/nvidia-glx.postrm debian/nvidia-glx.init \
-debian/nvidia-glx-ia32.lintian-overrides debian/nvidia-glx-ia32.links \
+debian/nvidia-glx-ia32.links \
 debian/nvidia-libvdpau1-ia32.links \
 debian/nvidia-kernel-source.docs debian/nvidia-glx-dev.preinst \
 debian/libcuda1.install debian/libcuda1-ia32.install debian/libcuda1-dev.install \
 debian/libcuda1.links debian/libcuda1-ia32.links \
-debian/libcuda1.lintian-overrides.amd64 debian/libcuda1.lintian-overrides.i386 \
-debian/libcuda1-ia32.lintian-overrides \
 debian/libcuda1-ia32.symbols \
-debian/nvidia-libvdpau1.lintian-overrides.amd64 debian/nvidia-libvdpau1.lintian-overrides.i386 \
-debian/nvidia-libvdpau1-ia32.lintian-overrides \
 debian/nvidia-libvdpau1-ia32.symbols \
 debian/nvidia-vdpau-driver.docs \
 debian/nvidia-vdpau-driver-ia32.links \
 debian/nvidia-vdpau-driver.links \
-debian/nvidia-vdpau-driver.lintian-overrides.amd64 \
-debian/nvidia-vdpau-driver.lintian-overrides.i386 \
 debian/nvidia-vdpau-driver-ia32.docs \
-debian/nvidia-vdpau-driver-ia32.lintian-overrides \
 debian.binary/changelog
 
 
@@ -330,17 +322,8 @@ debian.binary/changelog: debian/changelog
 debian/nvidia-libvdpau1-ia32.symbols: debian/nvidia-libvdpau1.symbols.i386
 	sed 's/nvidia-libvdpau1/nvidia-libvdpau1-ia32/g' $< > $@
 
-debian/nvidia-libvdpau1-ia32.lintian-overrides: debian/nvidia-libvdpau1.lintian-overrides.i386
-	sed 's/^nvidia-libvdpau1:/nvidia-libvdpau1-ia32:/; s%usr/lib/%usr/lib32/%g' $< > $@
-
-debian/nvidia-vdpau-driver-ia32.lintian-overrides: debian/nvidia-vdpau-driver.lintian-overrides.i386
-	sed 's/^nvidia-vdpau-driver:/nvidia-vdpau-driver-ia32:/; s%usr/lib/%usr/lib32/%g' $< > $@
-
 debian/libcuda1-ia32.symbols: debian/libcuda1.symbols
 	sed 's/libcuda1/libcuda1-ia32/g' $< > $@
-
-debian/libcuda1-ia32.lintian-overrides: debian/libcuda1.lintian-overrides.i386
-	sed 's/^libcuda1:/libcuda1-ia32:/; s%usr/lib/%usr/lib32/%g' $< > $@
 
 
 # Build architecture dependant packages using the common target.
