--- a/debian.binary/control.template
+++ b/debian.binary/control.template
@@ -1,20 +1,22 @@
 Source: nvidia-kernel
 Section: non-free/kernel
 Priority: optional
-Maintainer: Randall Donald <rdonald@debian.org>
-Build-Depends: debhelper (>> 3.0.0), make, libc6-dev
-Standards-Version: 3.6.0
+Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
+Uploaders: Randall Donald <rdonald@debian.org>, Russ Allbery <rra@debian.org>
+Build-Depends: debhelper (>= 7)
+Standards-Version: 3.8.4
+Homepage: http://www.nvidia.com/
 
 Package: nvidia-kernel-#KVERS#
 Architecture: i386 amd64
 Provides: nvidia-kernel-#VERSION#
-Depends: nvidia-kernel-common, linux-image-#KVERS#
+Depends: nvidia-kernel-common (>= 20050829), linux-image-#KVERS#
 Description: NVIDIA binary kernel module for Linux #KVERS#
- These Xorg binary drivers provide optimized hardware acceleration of 
- OpenGL applications via a direct-rendering X Server. 
+ This package provides the non-free NVIDIA binary kernel module built for
+ the Debian Linux kernel package.  This kernel module is required by the
+ nvidia-glx X video driver, the non-free binary video driver for NVIDIA
+ graphics chipsets.  This is the main NVIDIA driver release, which
+ supports the latest chipsets; for older chipsets, see the NVIDIA legacy
+ packages.
  .
- This package contains the NVIDIA binary kernel module needed by
- nvidia-glx.
- .
- For more information on this source package visit NVIDIA's homepage
- at http://www.nvidia.com/ .
+ This package is built for linux-image-#KVERS#.
